# aws-artifact-copy

./: flake.nix  pyproject.toml
aws_artifact_copy/: __init__.py  cli.py
aws_artifact_copy/common/: botocore.py  serialization.py
aws_artifact_copy/services/: __init__.py  ebs.py  ecr.py
tests/: test_aws_artifact_copy.py
