[tool.poetry]
name = "aws_artifact_copy"
version = "0.1.0"
description = ""
authors = ["Chaz Schlarp <schlarpc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
trio-asyncio = "^0.12.0"
trio = "^0.19.0"
aiobotocore = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
aws-artifact-copy = "aws_artifact_copy.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
